--- a/public/index2.html
+++ b/public/index2.html
@@ -9,8 +9,7 @@
   </head>
   <body>
     <div id="app"></div>
-    <script type="text/javascript" src="http://localhost:8080/app.js"></script></body>
-
     <!-- built files will be auto injected -->
+  <script type="text/javascript" src="http://localhost:8080/app.js"></script>
   </body>
 </html>
